Build native image with distroless runtime